add a summary notebook 4

--- a/ix-lab2/notebooks/ix-lab2-notebook-part4.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part4.ipynb
@@ -849,6 +849,20 @@
     "pi_approach_6 = power_iteration(H6, 0.85, 1000)\n",
     "print ('PageRank score via Approach 6:', (pi_approach_6[target_index]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Best Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Approach 2 proved best, increasing the score of History of mathematics to 0.0067, making it the second most popular page on wikipedia."
+   ]
   }
  ],
  "metadata": {
