complete Lab 4 part 3 - LDA

--- a/ix-lab4/lab4-2-lsi.ipynb
+++ b/ix-lab4/lab4-2-lsi.ipynb
@@ -29,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -116,11 +118,11 @@
    "source": [
     "### Question 1:  U, V, and S\n",
     "\n",
-    "Firstly, the TF-IDF matrix represents the relationship between terms and documents. Specifically, each of the $14513$ rows is a term represented as its importance/relevance to each of the $854$ courses, and each of the $854$ columns is a course represented as the importances/relevances of the $14513$ terms.\n",
+    "Firstly, the TF-IDF matrix represents the relationship between terms and documents. Specifically, each of the $5466$ rows is a term represented as its importance/relevance to each of the $854$ courses, and each of the $854$ columns is a course represented as the importances/relevances of the $5466$ terms.\n",
     "\n",
-    "When an SVD is taken with $rank=300$, the matrices $U$ will be $14513\\times 300$ and $V^T$ will be $300\\times 854$. Now, there is an intermediate matrix $\\Sigma$ with dimensions $300\\times 300$ which represents the importance of the latent factors / concepts / categories. $\\Sigma$ is a diagonal matrix containing the singular values of the original matrix. The $i$th singular value represents the importance of the $i$th latent factor.\n",
+    "When an SVD is taken with $rank=300$, the matrices $U$ will be $5466\\times 300$ and $V^T$ will be $300\\times 854$. Now, there is an intermediate matrix $\\Sigma$ with dimensions $300\\times 300$ which represents the importance of the latent factors / concepts / categories. $\\Sigma$ is a diagonal matrix containing the singular values of the original matrix. The $i$th singular value represents the importance of the $i$th latent factor.\n",
     "\n",
-    "Thus, now in $U$, each of the $14513$ rows is a term represented as its \"strength of membership\" to each of the $300$ latent factors, and each of the $300$ columns is a latent factor represented as the \"strengths of membership\" of each of the $14513$ terms. In $V^T$, each of the $300$ rows is a latent factor represented as its relevance to each of the $854$ courses, and each of the $854$ columns is a course represented as the relevances of each of the $300$ latent factors."
+    "Thus, now in $U$, each of the $5466$ rows is a term represented as its \"strength of membership\" to each of the $300$ latent factors, and each of the $300$ columns is a latent factor represented as the \"strengths of membership\" of each of the $5466$ terms. In $V^T$, each of the $300$ rows is a latent factor represented as its relevance to each of the $854$ courses, and each of the $854$ columns is a course represented as the relevances of each of the $300$ latent factors."
    ]
   },
   {
@@ -183,7 +185,9 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Gets the top k (or top all) items in a given list\n",
@@ -795,7 +799,9 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "topic_2_label = [\n",
@@ -858,7 +864,9 @@
   {
    "cell_type": "code",
    "execution_count": 315,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def term_course_similarity(term_vec, course_vec):\n",
