--- a/ix-lab4/lab4-1-vsm.ipynb
+++ b/ix-lab4/lab4-1-vsm.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,8 +103,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "CAPITAL_LETTERS = ''.join(chr(ord('A') + i) for i in range(26))\n",
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,8 +187,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Remove the punctuation (except apostrophe which is used in stop words)\n",
@@ -198,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -227,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -245,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -272,8 +276,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Remove the stopwords and capitalized_stopwords\n",
@@ -283,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -296,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -340,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -385,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -415,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +439,7 @@
        " ('process', 792)]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +469,7 @@
        " ('102', 1)]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -504,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -537,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -548,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -564,6 +570,17 @@
     "# Check the first course's description\n",
     "print(courses[0]['courseId'])\n",
     "print(courses[0]['description'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "save_pkl(courses, 'courses_prepped.pkl')"
    ]
   },
   {
